WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275899
popovertarget doesn't work on button in form
https://bugs.webkit.org/show_bug.cgi?id=275899
Summary
popovertarget doesn't work on button in form
Luke Warlow
Reported
2024-06-26 04:32:51 PDT
When a `<button type="button">` is in a form popovertarget doesn't work on it. Test with
https://codepen.io/keithamus/pen/pomQVbg
Attachments
Add attachment
proposed patch, testcase, etc.
Luke Warlow
Comment 1
2024-06-26 04:41:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30187
Radar WebKit Bug Importer
Comment 2
2024-07-03 04:33:12 PDT
<
rdar://problem/131042177
>
Luke Warlow
Comment 3
2024-08-27 08:50:10 PDT
***
Bug 261945
has been marked as a duplicate of this bug. ***
EWS
Comment 4
2024-08-27 10:29:43 PDT
Committed
282801@main
(9a8ecbaa8fc5): <
https://commits.webkit.org/282801@main
> Reviewed commits have been landed. Closing PR #30187 and removing active labels.
Leevi
Comment 5
2024-08-27 13:56:36 PDT
Thanks for resolving this Luke.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug