popovertarget on button type=button in form doesn't work https://bugs.webkit.org/show_bug.cgi?id=275899

Reviewed by Darin Adler.

This patch fixes an issue where buttons with popovertarget never work when inside a form.

* LayoutTests/imported/w3c/web-platform-tests/html/semantics/popovers/button-type-popovertarget-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/popovers/button-type-popovertarget.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/popovers/button-type-reset-popovertarget.tentative-expected.txt: Removed.
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/popovers/button-type-reset-popovertarget.tentative.html: Removed.
* Source/WebCore/html/HTMLButtonElement.cpp:
(WebCore::HTMLButtonElement::defaultEventHandler):

Canonical link: https://commits.webkit.org/282801@main